<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Blissify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Bliss Customization</string>
    <string name="animation_category">Animations</string>
    <string name="button_category">Buttons</string>
    <string name="gestures_category">Gestures</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="interface_category">Interface</string>
    <string name="qs_category">Quick Settings</string>
    <string name="recents_category">Recents</string>
    <string name="statusbar_category">Statusbar</string>
    <string name="fab_updates">Updates</string>
    <string name="fab_restartui">Restart UI</string>
    <string name="fab_reset">Reset</string>
    <string name="fab_about">About RR-OS</string>
    <string name="fab_layout">Update layout</string>
    <string name="fab_layout_update">Toggle classic layout</string>
    <string name="fab_layout_toggle">Toggle tab layout</string>
    <string name="bliss_reset_message">Reset all configurations to default values?</string>
    <string name="bliss_reset_settings">Reset settings</string>
    <string name="bliss_reset_yes">Yes</string>
    <string name="bliss_reset_cancel">Cancel</string>
    <string name="navigationbar_settings_title">SmartNav</string>
    <string name="buttons_navbar_title">NavBar</string>
    <string name="buttons_power_title">Power</string>
    <string name="buttons_volume_title">Volume</string>
    <string name="buttons_hwkeys_title">Hardware</string>
    <string name="interface_theme_title">Theme</string>
    <string name="interface_misc_title">Misc</string>
    <string name="interface_callopt_title">Call options</string>
    <string name="interface_weather_title">Weather</string>
    <string name="interface_batteryled_title">Battery LED</string>
    <string name="recents_style_title">Style</string>
    <string name="qs_panel_title">Panel</string>
    <string name="qs_header_title">Header</string>
    <string name="lockscreen_ui_title">UI options</string>
    <string name="lockscreen_sec_title">Security options</string>
    <string name="system_animation_title">System</string>
    <string name="screenoff_animation_title">Screen off</string>
    <string name="toast_animation_title">Toast</string>
    <string name="qstiles_animation_title">QS Tile</string>
    <string name="statusbar_icons_title">Items</string>
    <string name="statusbar_clock_title">Clock</string>
    <string name="statusbar_battery_title">Battery</string>
    <string name="statusbar_headsup_title">Headsup</string>
    <string name="unit_x1000ms">x1000 ms</string>
    <string name="unit_percent">\u0025</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_px">px</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="buttons_navbar_summary">Navigation bar options</string>
    <string name="buttons_smartbar_summary">Highly customizable navigation bar options</string>
    <string name="buttons_power_summary">Power button options</string>
    <string name="buttons_volume_summary">Customizations to the volume button</string>
    <string name="buttons_hwkeys_summary">Hardware keys customization</string>
    <string name="interface_misc_summary">Access to AppOps and aspect ratio hack for apps</string>
    <string name="interface_callopt_summary">Various calling options</string>
    <string name="interface_weather_summary">Systems weather options</string>
    <string name="interface_batteryled_summary">Change the colors for the charging led indication</string>
    <string name="recents_style_summary">Change recents display style</string>
    <string name="qs_panel_summary">Quick setting panel custom options</string>
    <string name="qs_header_summary">Quick setting header customizations</string>
    <string name="vol_dnd_category_title">Do not disturb mode</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">allow volume up to exit do not disturb mode</string>
    <string name="vol_zen_title">Do not disturb switch</string>
    <string name="vol_zen_summary">Show do not disturb switch on volume panel</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="nettraffic_settings_title">Network Traffic</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="use_old_mobiletype_title">Use old mobile type style</string>
    <string name="use_old_mobiletype_summary">Merge signal and type icons</string>
    <string name="qs_panel_alpha_title">Quick Settings opacity</string>
    <string name="qs_panel_alpha_summary">Configure opacity of background</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
    <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
    <string name="heads_up_snooze_title">Peek notification snooze timer</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="log_category">Notifications history</string>
    <string name="notification_log_title">Notification log</string>
    <string name="notification_log_summary">Show notifications history log</string>
    <string name="heads_up_title">Enable</string>
    <string name="heads_up_summary_enabled">Heads up notifications are enabled</string>
    <string name="heads_up_summary_disabled">Heads up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Don\'t show heads up from these applications</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="statusbar_show_wifi_activity_title">Show Wi-Fi data indicators</string>
    <string name="statusbar_show_wifi_activity_summary">Show indicators when Wi-Fi is sending/receiving data like mobile</string>
    <string name="statusbar_weather_cat">Statusbar Weather</string>
    <string name="statusbar_weather_title">Layout style</string>
    <string name="statusbar_weather_dialog_title">Status bar weather style</string>
    <string name="statusbar_icons_cat">Icons</string>
    <string name="statusbar_notifi_cat">Notifications</string>
    <string name="status_bar_show_ticker_title">Ticker</string>
    <string name="status_bar_show_ticker_summary">Notification preview in status bar</string>
    <string name="ticker_animation_mode_title">Ticker animation</string>
    <string name="ticker_tick_duration_title">Ticker duration</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_category">Navigation buttons</string>
    <string name="hardware_keys_disable_title">Disable navigation buttons</string>
    <string name="screen_record_shortcut">Screenrecord Shortcut</string>
    <string name="screen_record_shortcut_on">Power + Volume Up triggers Screenrecord</string>
    <string name="screen_record_shortcut_off">Power + Volume Up does nothing</string>
    <string name="screen_shot_shortcut">Screenshot Shortcut</string>
    <string name="screen_shot_shortcut_on">Power + Volume Down triggers screenshot</string>
    <string name="screen_shot_shortcut_off">Power + Volume Down does nothing</string>
    <string name="hardware_backlight_category">HW Key Backlight</string>
    <string name="backlight_timeout_title">Buttons backlight timeout</string>
    <string name="button_brightness_title">Backlight</string>
    <string name="button_brightness_sw_title">Enable backlight</string>
    <string name="audio_panel_view">Audio panel</string>
    <string name="audio_panel_view_media_title">Media</string>
    <string name="audio_panel_view_ringer_title">Ring</string>
    <string name="audio_panel_view_notification_title">Notification</string>
    <string name="audio_panel_view_alarm_title">Alarm</string>
    <string name="audio_panel_view_voice_title">Voice</string>
    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
    <string name="volume_panel_on_left_title">Volume Panel on Left</string>
    <string name="volume_panel_on_left_summary">Change volume panel from right side to left side</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="lockscreen_hide_shortcuts_title">Hide Bottom Shortcuts</string>
    <string name="lockscreen_hide_shortcuts_summary">Hide Left-Right Shortcuts on secure lock screens</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
    <string name="less_boring_heads_up_title">Dialer HeadsUp</string>
    <string name="less_boring_heads_up_summary">Show heads up only for dialer app and disable all others</string>
</resources>