<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bliss="http://schemas.android.com/apk/res-auto">

    <Preference 
        android:key="bliss_logo"
        android:layout="@layout/bliss_logo" />

     <PreferenceCategory
         android:key="statusbar_icons"
         android:title="@string/statusbar_icons_cat"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="statusbar_show_wifi_activity"
            android:title="@string/statusbar_show_wifi_activity_title"
            android:summary="@string/statusbar_show_wifi_activity_summary"
            android:defaultValue="true" />

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="use_old_mobiletype"
            android:title="@string/use_old_mobiletype_title"
            android:summary="@string/use_old_mobiletype_summary"
            android:defaultValue="false" />

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="roaming_indicator_icon"
            android:title="@string/roaming_indicator_icon_title"
            android:summary="@string/roaming_indicator_icon_summary"
            android:defaultValue="true"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="volte_icon"
            android:title="@string/volte_icon_title"
            android:summary="@string/volte_icon_summary"
            android:defaultValue="false"/>

    <PreferenceCategory
        android:title="@string/carrier_label_settings_title"/>

         <com.blissroms.blissify.preference.SystemSettingListPreference
            android:key="status_bar_show_carrier"
            android:title="@string/show_carrier_title"
            android:dialogTitle="@string/show_carrier_title"
            android:entries="@array/carrier_label_entries"
            android:entryValues="@array/carrier_label_values"
            android:summary="%s"
            android:defaultValue="1" />

         <PreferenceScreen
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

     <PreferenceCategory
         android:key="nettraffic_settings"
         android:title="@string/nettraffic_settings_title"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="network_traffic_state"
            android:title="@string/network_traffic_state_title"
            android:defaultValue="false" />

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="network_traffic_hidearrow"
            android:title="@string/network_traffic_hidearrow"
            android:summary="@string/network_traffic_hidearrow_summary"
            android:dependency="network_traffic_state"
            android:defaultValue="false" />

         <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
            android:key="network_traffic_autohide_threshold"
            android:title="@string/network_traffic_autohide_threshold_title"
            android:max="10"
            android:min="0"
            bliss:unitsLeft=""
            bliss:unitsRight=""
            android:defaultValue="0"
            android:dependency="network_traffic_state" />

    <PreferenceCategory
        android:key="statusbar_notifi"
        android:title="@string/statusbar_notifi_cat" />

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="status_bar_show_ticker"
            android:title="@string/status_bar_show_ticker_title"
            android:summary="@string/status_bar_show_ticker_summary"
            android:defaultValue="false" />

        <com.blissroms.blissify.preference.SystemSettingIntListPreference
            android:key="status_bar_ticker_animation_mode"
            android:title="@string/ticker_animation_mode_title"
            android:entries="@array/ticker_animation_mode_entries"
            android:entryValues="@array/ticker_animation_mode_values"
            android:dependency="status_bar_show_ticker"
            android:defaultValue="0" />

        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
            android:key="status_bar_ticker_tick_duration"
            android:title="@string/ticker_tick_duration_title"
            android:dependency="status_bar_show_ticker"
            android:min="500"
            android:max="10000"
            android:defaultValue="3000"
            bliss:interval="100"
            bliss:unitsLeft=""
            bliss:unitsRight="ms" />

    <PreferenceCategory
        android:key="statusbar_weather"
        android:title="@string/statusbar_weather_cat" />

         <com.blissroms.blissify.preference.SystemSettingListPreference
            android:key="statusbar_show_weather_temp"
            android:title="@string/statusbar_weather_title"
            android:dialogTitle="@string/statusbar_weather_dialog_title"
            android:entries="@array/status_bar_weather_entries"
            android:entryValues="@array/status_bar_weather_values" />

</PreferenceScreen>
