<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bliss="http://schemas.android.com/apk/res-auto">

    <Preference 
        android:key="bliss_logo"
        android:layout="@layout/bliss_logo" />

    <SwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:persistent="false" />

    <com.bliss.support.preferences.SystemSettingSwitchPreference  
        android:key="fp_unlock_keystore" 
        android:title="@string/fp_unlock_keystore_title" 
        android:summary="@string/fp_unlock_keystore_summary" 
        android:defaultValue="false" />

    <com.bliss.support.preferences.SecureSettingSwitchPreference
        android:key="face_auto_unlock"
        android:title="@string/face_auto_unlock_title"
        android:summary="@string/face_auto_unlock_summary"
        android:defaultValue="false" />

    <com.bliss.support.preferences.SecureSettingSwitchPreference 
        android:key="hide_lock_shortcuts" 
        android:title="@string/lockscreen_hide_shortcuts_title" 
        android:summary="@string/lockscreen_hide_shortcuts_summary" 
        android:defaultValue="false" />

    <com.bliss.support.preferences.SecureSettingSwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:title="@string/block_on_secure_keyguard_title"
        android:summary="@string/block_on_secure_keyguard_summary"
        android:defaultValue="false"/>

</PreferenceScreen>
