<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference 
        android:key="bliss_logo"
        android:layout="@layout/bliss_logo" />

    <com.bliss.support.preferences.GlobalSettingSwitchPreference
        android:key="heads_up_notifications_enabled"
        android:title="@string/heads_up_title"
        android:summaryOn="@string/heads_up_summary_enabled"
        android:summaryOff="@string/heads_up_summary_disabled"
        android:defaultValue="true" />

    <com.bliss.support.preferences.SystemSettingSwitchPreference
        android:key="less_boring_heads_up"
        android:title="@string/less_boring_heads_up_title"
        android:summary="@string/less_boring_heads_up_summary"
        android:dependency="heads_up_notifications_enabled"
        android:defaultValue="false" />

    <com.bliss.support.preferences.SystemSettingIntListPreference
        android:key="heads_up_timeout"
        android:title="@string/heads_up_time_out_title"
        android:entries="@array/heads_up_time_out_entries"
        android:entryValues="@array/heads_up_time_out_values"
        android:dependency="heads_up_notifications_enabled"
        android:summary="%s"
        android:defaultValue="2000" />

    <com.bliss.support.preferences.SystemSettingIntListPreference
        android:key="heads_up_notification_snooze"
        android:title="@string/heads_up_snooze_title"
        android:entries="@array/heads_up_snooze_entries"
        android:entryValues="@array/heads_up_snooze_values"
        android:dependency="heads_up_notifications_enabled"
        android:defaultValue="0" />

    <PreferenceCategory
        android:title="@string/heads_up_blacklist_title"
        android:key="blacklist_applications"
        android:dependency="heads_up_notifications_enabled" >

         <Preference
            android:key="add_blacklist_packages"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_heads_up_package"
            android:summary="@string/add_heads_up_blacklist_summary" />

     </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/heads_up_stoplist_title"
            android:key="stoplist_applications"
            android:dependency="heads_up_notifications_enabled" >

        <Preference
            android:key="add_stoplist_packages"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_heads_up_package"
            android:summary="@string/add_heads_up_stoplist_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/log_category">

        <Preference
            android:title="@string/notification_log_title"
            android:summary="@string/notification_log_summary"
            android:fragment="com.android.settings.notification.NotificationStation" />

     </PreferenceCategory>

</PreferenceScreen>
