<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
       xmlns:blissns="http://schemas.android.com/apk/res-auto">

    <Preference 
        android:key="bliss_logo"
        android:layout="@layout/bliss_logo" />

    <PreferenceCategory
         android:key="hardware_keys"
	 android:title="@string/hardware_keys_category">
        <SwitchPreference
             android:key="hardware_keys_disable"
	     android:title="@string/hardware_keys_disable_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="back_key"
        android:title="@string/hardware_keys_back_key_title" >

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_back_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_back_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_back_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="home_key"
        android:title="@string/hardware_keys_home_key_title" >

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_home_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_home_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_home_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_switch_key"
        android:title="@string/hardware_keys_appswitch_key_title" >        

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_overview_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_overview_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_overview_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="hardware_backlight"
        android:title="@string/hardware_backlight_category" >

        <SwitchPreference
            android:key="button_brightness_sw"
            android:title="@string/button_brightness_sw_title"
            android:persistent="false" />

        <com.blissroms.blissify.preference.CustomSeekBarPreference
            android:key="button_brightness"
            android:title="@string/button_brightness_title"
            android:max="255"
            settings:min="0"
            settings:units=""
            android:persistent="false" />

        <ListPreference
            android:dialogTitle="@string/backlight_timeout_title"
            android:entries="@array/backlight_timeout_entries"
            android:entryValues="@array/backlight_timeout_values"
            android:key="backlight_timeout"
            android:persistent="false"
            android:title="@string/backlight_timeout_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="menu_key"
        android:title="@string/hardware_keys_menu_key_title" >        

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_menu_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_menu_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_menu_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="assist_key"
        android:title="@string/hardware_keys_assist_key_title" >

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_assist_single_tap"
            android:summary="@string/hardware_keys_single_tap_summary"
            android:title="@string/hardware_keys_single_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_assist_long_press"
            android:summary="@string/hardware_keys_long_press_summary"
            android:title="@string/hardware_keys_long_press_title" >
        </com.android.settings.smartnav.ActionPreference>

        <com.android.settings.smartnav.ActionPreference
            android:key="hwkeys_button_assist_double_tap"
            android:summary="@string/hardware_keys_double_tap_summary"
            android:title="@string/hardware_keys_double_tap_title" >
        </com.android.settings.smartnav.ActionPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vol_key"
        android:title="@string/buttons_volume_title"/>

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="swap_volume_buttons"
        android:title="@string/swap_volume_buttons_title"
        android:summary="@string/swap_volume_buttons_summary"
        android:defaultValue="false" />

    <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
        android:key="volume_dialog_timeout"
        android:title="@string/volume_dialog_timeout_title"
        android:min="500"
        android:max="10000"
        android:defaultValue="3000"
        blissns:interval="100"
        settings:unitsLeft=""
        settings:unitsRight="ms" />

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="volume_panel_on_left"
        android:title="@string/volume_panel_on_left_title"
        android:summary="@string/volume_panel_on_left_summary"
        android:defaultValue="false" />

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="screen_shot_shortcut"
        android:title="@string/screen_shot_shortcut"
        android:summaryOn="@string/screen_shot_shortcut_on"
        android:summaryOff="@string/screen_shot_shortcut_off"
        android:defaultValue="true" />

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="screen_record_shortcut"
        android:title="@string/screen_record_shortcut"
        android:summaryOn="@string/screen_record_shortcut_on"
        android:summaryOff="@string/screen_record_shortcut_off"
        android:defaultValue="true" />


    <PreferenceCategory
        android:key="vol_dnd_category"
        android:title="@string/vol_dnd_category_title"/>

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="sysui_volume_down_silent"
        android:title="@string/volbtn_down_zen_title"
        android:summary="@string/volbtn_down_zen_summary"
        android:defaultValue="true"/>

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="sysui_volume_up_silent"
        android:title="@string/volbtn_up_zen_title"
        android:summary="@string/volbtn_up_zen_summary"
        android:defaultValue="true" />

    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
        android:key="sysui_show_full_zen"
        android:title="@string/vol_zen_title"
        android:summary="@string/vol_zen_summary"
        android:defaultValue="false"/>

   <PreferenceCategory
        android:title="@string/audio_panel_view">

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="audio_panel_view_media"
            android:title="@string/audio_panel_view_media_title"
            android:defaultValue="true"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="audio_panel_view_ringer"
            android:title="@string/audio_panel_view_ringer_title"
            android:defaultValue="false"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="audio_panel_view_notification"
            android:title="@string/audio_panel_view_notification_title"
            android:defaultValue="false"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="audio_panel_view_alarm"
            android:title="@string/audio_panel_view_alarm_title"
            android:defaultValue="false"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="audio_panel_view_voice"
            android:title="@string/audio_panel_view_voice_title"
            android:defaultValue="false"/>

        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
            android:key="audio_panel_view_bt_sco"
            android:title="@string/audio_panel_view_bt_sco_title"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>
